Fix badge update logic for cellular network icon.

Bug: 776236
Change-Id: I41f84b07f6ebd28434897bb77edcc9254987ec1b
Reviewed-on: https://chromium-review.googlesource.com/727024
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Ben Chan <benchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510136}
Former-commit-id: 0f929baac5f0ab3d0ba28911fab402208f336659